--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "raft-rs"
+name = "craft"
 version = "0.1.0"
 authors = ["cssivision <cssivision@gmail.com>"]
 license = "MIT"
@@ -11,7 +11,5 @@ readme = "README.md"
 [dependencies]
 protobuf = "1.4"
 log = "0.4"
-failure = "0.1"
-failure_derive = "0.1"
 rand = "0.4"
 quick-error = "1.2"
