--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 authors = ["cssivision <cssivision@gmail.com>"]
 edition = "2018"
-name = "raftexample"
+name = "example"
 version = "0.1.0"
 
 [dependencies]
+clap = "2.32"
 libraft = "0.1"
